Bug 166325 - FILESAVE DOCX Word fails to open roundtripped document (bg2 theme color turns into light2)
Summary: FILESAVE DOCX Word fails to open roundtripped document (bg2 theme color turns...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Corrupted OOXML-Doc-Themes
  Show dependency treegraph
 
Reported: 2025-04-24 14:26 UTC by Aron Budea
Modified: 2025-12-12 09:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-04-24 14:26:35 UTC
Open and save attachment 99563 [details] from bug 79062 back to DOCX, then try opening it in Word.

=> Word fails to open the file cleanly.

Observed using LO 25.8.0.0.alpha0+ (736998ccef0bacdd2bbf038c98dacfbe654f1a4d) / Windows.

If one:
- unzips the saved DOCX,
- executes the following command (can be done in Linux/Cygwin, needs xmllint installed): find . -name "*.xml" -type f -exec xmllint --output '{}' --format '{}' \;
- rezips the result with .docx extension

Then Word points to line 105 in word/footnotes.xml, which is the first line of this part:
<w14:schemeClr w14:val="light2">
  <w14:tint w14:val="85000"/>
  <w14:satMod w14:val="155000"/>
</w14:schemeClr>

This is a regression from the following commit in 25.2:
https://git.libreoffice.org/core/commit/baf179188d8b9e29188387fd4b7d887dd3168792
author		Vladislav Tarakanov <vladislav.tarakanov@bk.ru>	Sat Oct 19 00:12:34 2024 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	Sat Oct 19 14:26:23 2024 +0200

"tdf#156333 Adding a tint/shade values to the model"

The similar exported part looks like this when exported in a build preceding the regression:
<w14:schemeClr w14:val="bg2">
  <w14:tint w14:val="85000"/>
  <w14:satMod w14:val="155000"/>
</w14:schemeClr>

List of test files affected by this bug:
fdo70105-2.docx (attachment 87180 [details] from bug 70105)
fdo79062-1.docx (the attachment mentioned at the beginning)
forum-mso-de-111186.docx
forum-mso-en3-30100.docx
forum-mso-en-8841.docx
tdf105134-1.docx (attachment 130189 [details] from bug 105134 that is marked obsolete)
Comment 1 Sergey Katunin 2025-12-10 14:27:57 UTC
Hi, Vladislav Tarakanov <vladislav.tarakanov@bk.ru> asked me to send a message from him.

Original message from Vladislav Tarakanov:

"Sorry for not being able to respond sooner. Yes, there is indeed an error when exporting to docx. In this section: https://gerrit.libreoffice.org/c/core/+/157979/21/sw/source/filter/ww8/docxattributeoutput.cxx

At the beginning of the change, there is a table containing incorrect theme names.

If I'm not mistaken, ECMA 376 specifies that there is also a theme map that maps external themes (like bg2) to internal themes (like light2). If this is true, then in the future, it would be better to preserve the original theme upon import and then map it to the actual theme via the theme map, but that requires separate discussion. I plan to revisit this issue (support for text effects like tint) as soon as it becomes possible. To fix the critical issue now, it should be enough to correct the names of the themes at the file attached above."
Comment 2 Commit Notification 2025-12-12 04:40:11 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d5136e0b6059435356351cf2c54af61401e45fc2

tdf#166325 sw: use correct type when exporting scheme color to DOCX

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Aron Budea 2025-12-12 04:43:16 UTC
(In reply to Sergey Katunin from comment #1)
> Hi, Vladislav Tarakanov <vladislav.tarakanov@bk.ru> asked me to send a
> message from him.
Thanks for the update! I had a similar idea in mind, and implemented a fix based on that.
Comment 4 Commit Notification 2025-12-12 08:02:38 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/43b74c0037b0d1b2ea2f4dc4faa42283addcf483

tdf#166325 sw: use correct type when exporting scheme color to DOCX

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-12 09:51:06 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6df31d3c358027660a39f63e784915043128a6ac

tdf#166325 sw: use correct type when exporting scheme color to DOCX

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.