tdf#166325 sw: use correct type when exporting scheme color to DOCX

OOXML schemeClr element has a different type (ST_SchemeColorVal)
compared to themeColor's ST_ThemeColor type, eg. dk1 instead
of dark1, but commit baf179188d8b9e29188387fd4b7d887dd3168792
mapped them to the same values on export, causing some affected
files to become invalid.

Change-Id: Iff63aea8943be905c9afbb68012db320cc94eeb9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195346
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>
(cherry picked from commit d5136e0b6059435356351cf2c54af61401e45fc2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195507
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>